# CareerApp

./: .gitignore  AppName_BuildChecklist_v5_3.html  AppName_BuildChecklist_v5_4.html  AppName_BuildChecklist_v5_5.html  AppName_BuildChecklist_v5_6.html  CHANGELOG.md  README.md  ROADMAP.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  cron-digest.yml  cron-jobs-fetch.yml  cron-push.yml  deploy-backend.yml  desktop-release.yml
backend/: .dockerignore  .env.example  DEPLOY.md  Dockerfile  README.md  appname-server.spec  config.py  llm.py  main.py  render.yaml  requirements.txt  scheduler.py  sidecar_main.py
backend/ai/: cover_letter.py  interview_prep.py
backend/analytics/: __init__.py  service.py
backend/auth/: __init__.py  local_token.py  supabase_jwt.py
backend/billing/: lemonsqueezy.py
backend/coach/: __init__.py  service.py
backend/jobs/: cache.py  pipeline.py  sources.py  tagger.py
backend/notifications/: email.py  push.py
backend/resumes/: file_storage.py  parser.py
backend/storage/: __init__.py  base.py  sqlite_adapter.py  sqlite_schema.sql  supabase_adapter.py
desktop/: README.md  UPDATE_MANIFEST.md
desktop/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
desktop/src-tauri/icons/: README.md
desktop/src-tauri/src/: lib.rs  main.rs
docs/: AppName_BuildChecklist_v5_2.html  DESKTOP_VALIDATION.md
mobile/: SUBMIT.md  app.json  babel.config.js  eas.json  package-lock.json  package.json
mobile/app/: index.tsx  (+2 more)
supabase/: schema.sql
web/: .env.example  next.config.js  package-lock.json  package.json
(+114 files in other folders)
