[package]
name = "appname-desktop"
version = "0.1.0"
description = "AppName — desktop job-search app"
authors = ["AppName"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "appname_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-stronghold = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"

# Used by sidecar manager to find a free TCP port.
portpicker = "0.1"

[features]
custom-protocol = ["tauri/custom-protocol"]
